--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Patrol</title>
+    <style>
+        body {
+            background-color: beige;
+        }
+    </style>
 </head>
 
 <body>
